--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,27 +33,30 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         android:background="@color/colorAccent"
-       android:textAlignment="center"
         android:includeFontPadding="true"
         android:text="@string/pacientes"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textview2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button1" />
+
     <TextView
         android:id="@+id/textview2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:includeFontPadding="true"
         android:text="@string/hello"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview1"
-        tools:layout_editor_absoluteY="648dp" />
+        app:layout_constraintTop_toBottomOf="@id/textview1" />
 
 
 
