--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,5 +91,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView3" />
 
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:rowCount="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:context=".MainActivity"
+        tools:ignore="ExtraText"
+        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/button2"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_gravity="start|top"
+            android:src="@drawable/health_graph" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/button3"
+            android:layout_row="1"
+            android:layout_rowSpan="2"
+            android:layout_column="0"
+            android:layout_gravity="start|top"
+            android:src="@drawable/health_calendar" />
+    </GridLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
