--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LL1"
@@ -19,29 +19,38 @@
         android:layout_marginTop="32dp"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:drawableStart="@drawable/health_checkup"
-        android:text="@string/getpacientes"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/getpacientes" />
 
-    <TextView
-        android:id="@+id/textview1"
+    <GridLayout
+        android:id="@+id/GL_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@color/colorAccent"
-        android:includeFontPadding="true"
-        android:text="@string/pacientes"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textview2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button1" />
+        android:columnCount="2"
+        android:orientation="vertical"
+        android:rowCount="2"
+        android:visibility="visible">
+
+        <ImageButton
+            android:id="@+id/button2"
+            android:layout_width="32dp"
+            android:layout_height="16dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_gravity="start|top"
+            android:contentDescription="@string/test"
+            android:src="@drawable/health_graph" />
+
+        <ImageButton
+            android:id="@+id/button3"
+            android:layout_width="32dp"
+            android:layout_height="16dp"
+            android:layout_row="1"
+            android:layout_rowSpan="2"
+            android:layout_column="0"
+            android:layout_gravity="start|top"
+            android:contentDescription="@string/test"
+            android:src="@drawable/health_calendar" />
+    </GridLayout>
 
     <TextView
         android:id="@+id/textview2"
@@ -70,10 +79,7 @@
         android:text="@string/test"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview2" />
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/textView4"
@@ -86,41 +92,22 @@
         android:text="@string/hello"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="18sp"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3" />
+        android:textStyle="italic" />
 
-    <GridLayout
+
+    <TextView
+        android:id="@+id/textview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:orientation="horizontal"
-        android:rowCount="2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:context=".MainActivity"
-        tools:ignore="ExtraText"
-        tools:layout_editor_absoluteX="16dp">
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView4"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/colorAccent"
+        android:includeFontPadding="true"
+        android:text="@string/pacientes"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/button2"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_gravity="start|top"
-            android:src="@drawable/health_graph" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/button3"
-            android:layout_row="1"
-            android:layout_rowSpan="2"
-            android:layout_column="0"
-            android:layout_gravity="start|top"
-            android:src="@drawable/health_calendar" />
-    </GridLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
