--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LL1"
     android:layout_width="match_parent"
@@ -28,7 +27,7 @@
         android:id="@+id/editlogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:autofillHints="@string/sub"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:ems="10"
@@ -38,20 +37,20 @@
         android:id="@+id/editpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:autofillHints="@string/sub"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:ems="10"
         android:inputType="textPassword" />
 
+
     <GridLayout
         android:id="@+id/GL_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layoutMode="opticalBounds"
-        android:layout_weight="0"
         android:columnCount="2"
-        android:orientation="horizontal"
+        android:layoutMode="opticalBounds"
+        android:orientation="vertical"
         android:rowCount="2"
         android:visibility="visible">
 
@@ -97,102 +96,105 @@
 
     </GridLayout>
 
-    <TextView
-        android:id="@+id/textview2"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/LL_int_2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:includeFontPadding="true"
-        android:text="@string/hello"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview1" />
-
-    <TextView
-        android:id="@+id/textview1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:background="@color/colorAccent"
-        android:includeFontPadding="true"
-        android:text="@string/pacientes"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/textViewdoenca"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:includeFontPadding="true"
-        android:text="@string/test"
+        android:background="@color/colorAccent"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="18sp"
+        android:text="@string/doenca"
+        android:textSize="24sp"
         android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:includeFontPadding="true"
         android:text="@string/doenca"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LL_int_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/colorAccent"
+            android:includeFontPadding="true"
+            android:text="@string/dias"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="24sp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:includeFontPadding="true"
+            android:text="@string/dias"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="18sp"
+            android:textStyle="italic" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LL_int_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/textview1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@color/colorAccent"
         android:includeFontPadding="true"
-        android:text="@string/dias"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:text="@string/pacientes"
+        android:textAlignment="textStart"
         android:textSize="24sp"
-        android:textStyle="italic" />
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:includeFontPadding="true"
-        android:text="@string/dias"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="18sp"
-        android:textStyle="italic" />
-
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:includeFontPadding="true"
-        android:background="@color/colorAccent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:text="@string/opcoes"
+        <TextView
+            android:id="@+id/textview2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:includeFontPadding="true"
+            android:text="@string/hello"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="24sp"
-        android:textStyle="italic" />
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
 </LinearLayout>
