--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:autofillHints="@string/sub"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:ems="10"
+        android:hint="@string/login"
         android:inputType="textEmailAddress" />
 
     <EditText
@@ -41,6 +42,7 @@
         android:autofillHints="@string/sub"
         android:background="@color/common_google_signin_btn_text_dark_disabled"
         android:ems="10"
+        android:hint="@string/senha"
         android:inputType="textPassword" />
 
 
@@ -60,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="0"
-            android:layout_gravity="start|top"
+            android:layout_gravity="center"
             android:contentDescription="@string/test"
             android:src="@drawable/health_graph" />
 
@@ -70,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_row="0"
             android:layout_column="1"
-            android:layout_gravity="start|top"
+            android:layout_gravity="center"
             android:contentDescription="@string/test"
             android:src="@drawable/health_pill_96" />
 
@@ -80,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="0"
-            android:layout_gravity="start|top"
+            android:layout_gravity="center"
             android:contentDescription="@string/test"
             android:src="@drawable/health_calendar_96" />
 
@@ -90,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_row="1"
             android:layout_column="1"
-            android:layout_gravity="start|top"
+            android:layout_gravity="center"
             android:contentDescription="@string/test"
             android:src="@drawable/health_reflection_96" />
 
@@ -101,32 +103,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <TextView
-        android:id="@+id/textViewdoenca"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:includeFontPadding="true"
-        android:background="@color/colorAccent"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:text="@string/doenca"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:includeFontPadding="true"
-        android:text="@string/doenca"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="18sp"
-        android:textStyle="bold|italic" />
+        <TextView
+            android:id="@+id/textViewdoenca"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/colorAccent"
+            android:includeFontPadding="true"
+            android:text="@string/doenca"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="24sp"
+            android:textStyle="bold|italic" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:includeFontPadding="true"
+            android:text="@string/doenca"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
     </LinearLayout>
 
     <LinearLayout
@@ -136,11 +139,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textViewDias"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="1dp"
             android:layout_marginEnd="8dp"
             android:background="@color/colorAccent"
             android:includeFontPadding="true"
@@ -153,9 +156,9 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="1dp"
             android:includeFontPadding="true"
             android:text="@string/dias"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -168,19 +171,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <TextView
-        android:id="@+id/textview1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:background="@color/colorAccent"
-        android:includeFontPadding="true"
-        android:text="@string/pacientes"
-        android:textAlignment="textStart"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textview1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/colorAccent"
+            android:includeFontPadding="true"
+            android:text="@string/pacientes"
+            android:textAlignment="textStart"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textview2"
@@ -192,7 +196,7 @@
             android:includeFontPadding="true"
             android:text="@string/hello"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
 
