--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="p_colorful_Primary">#C38D9E</color>
+    <color name="p_colorful_PrimaryAlt">#C38D9E</color>
+    <color name="p_colorful_secundary">#41B3A3</color>
+    <color name="p_colorful_SecundaryAlt">#03DAC5</color>
+    <color name="p_colorful_Error">#E27D60</color>
+    <color name="p_colorful_ErrorAlt">#E8A87C</color>
+    <color name="p_colorful_back">#ecf0f1</color>
+
+
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
