--- a/app/src/main/res/layout/activity_opcoes.xml
+++ b/app/src/main/res/layout/activity_opcoes.xml
@@ -4,13 +4,12 @@
     android:id="@+id/LL1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/p_colorful_back"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:visibility="visible"
+    android:background="@color/p_colorful_bgraund"
     tools:context=".Opcoes">
-
 
     <GridLayout
         android:id="@+id/GL_1"
@@ -65,6 +64,7 @@
 
     </GridLayout>
 
+
     <LinearLayout
         android:id="@+id/LL_int_2"
         android:layout_width="wrap_content"
@@ -93,7 +93,7 @@
             android:layout_marginEnd="8dp"
             android:includeFontPadding="true"
             android:text="@string/doenca"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="normal" />
     </LinearLayout>
@@ -113,7 +113,7 @@
             android:layout_marginEnd="8dp"
             android:includeFontPadding="true"
             android:text="@string/dias"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="24sp"
             android:textStyle="bold|italic" />
 
@@ -129,7 +129,17 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tratamento_complement"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="18sp"
+            android:textStyle="bold|italic" />
     </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/LL_int_1"
@@ -147,6 +157,7 @@
             android:includeFontPadding="true"
             android:text="@string/pacientes"
             android:textAlignment="textStart"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="24sp"
             android:textStyle="bold|italic" />
 
@@ -159,7 +170,7 @@
             android:layout_marginEnd="8dp"
             android:includeFontPadding="true"
             android:text="@string/hello"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="normal" />
     </LinearLayout>
