--- a/app/src/main/res/layout/activity_opcoes.xml
+++ b/app/src/main/res/layout/activity_opcoes.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LL1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/p_colorful_bgraund"
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:visibility="visible"
-    android:background="@color/p_colorful_bgraund"
     tools:context=".Opcoes">
 
     <GridLayout
         android:id="@+id/GL_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_below="@id/LL_int_3"
         android:columnCount="2"
         android:layoutMode="opticalBounds"
         android:orientation="vertical"
         android:rowCount="2"
+        android:layout_marginTop="8dp"
         android:visibility="visible">
 
         <ImageButton
@@ -67,9 +68,12 @@
 
     <LinearLayout
         android:id="@+id/LL_int_2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_below="@id/LL_int_1"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="2dp"
+        android:orientation="horizontal"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/textView3"
@@ -92,7 +96,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:includeFontPadding="true"
-            android:text="@string/doenca"
+            android:text="@string/blanck"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="normal" />
@@ -100,9 +104,12 @@
 
     <LinearLayout
         android:id="@+id/LL_int_3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_below="@id/LL_int_2"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/textView5"
@@ -125,7 +132,7 @@
             android:layout_marginTop="1dp"
             android:layout_marginEnd="1dp"
             android:includeFontPadding="true"
-            android:text="@string/sub"
+            android:text="@string/blanck"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="italic" />
@@ -143,9 +150,12 @@
 
     <LinearLayout
         android:id="@+id/LL_int_1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/textview1"
@@ -156,7 +166,7 @@
             android:layout_marginEnd="8dp"
             android:includeFontPadding="true"
             android:text="@string/pacientes"
-            android:textAlignment="textStart"
+            android:textAlignment="viewStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="24sp"
             android:textStyle="bold|italic" />
@@ -165,14 +175,14 @@
             android:id="@+id/textview2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:includeFontPadding="true"
-            android:text="@string/hello"
+            android:text="@string/fulano"
+            android:textAlignment="viewStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textSize="18sp"
             android:textStyle="normal" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
